Got multiple variable filled with single get request. Overflow bug fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -64,7 +64,7 @@ nav a.active {
 .album-item {
   padding: 10px;
   margin: 10px;
-  background-color: gray;
+  background-color: orange;
 }
 
 .album-item:hover {
@@ -80,19 +80,40 @@ nav a.active {
   align-items: center;
 }
 
-
+.albums-box-box {
+  display: grid;
+  grid-template-columns: 50px auto 50px;
+  padding: 10px;
+  margin: 10px;
+  gap: 1em;
+}
 
 .photo-box {
   display: grid;
   grid-template-columns: auto auto auto auto auto auto;
   /* padding: 10px; */
+  gap: 1em;
+
   }
 
 .photo-item {
-font-size: 12px;
-text-align: center;
+  font-size: 12px;
+  text-align: center;
+  background-color: gray;
+  padding: 5px;
 }
 
 .div a {
   background-color: blue;
+}
+
+button {
+  background-color: orange;
+  width: 50px;
+}
+
+button:hover {
+  color: #039be5;
+  background-color: #cfd8dc;
+  cursor: pointer;
 }
